🐛 FIX: Footer Color Contrast
Big Footer headings did not meet WCAG 2.0 AA contrast

--- a/src/4/sass/partials/_headfoot.scss
+++ b/src/4/sass/partials/_headfoot.scss
@@ -551,7 +551,7 @@ p.site-description {
 	h3 {
 		font-size: .9em;
 		font-weight: bold;
-		color: #666;
+		color: #555;
 		font-family: $font-family-base;
 		margin: 0;
 	}
